...
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings_fragment">Settings</string>
    <string name="chat_fragment">Chat</string>}
    <string name="ds_photo_editor_top_button_apply">ds_photo_editor_top_button_apply</string>
    <string name="account_fragment">Account</string>
    <string name="my_questions_fragment">My Questions</string>
...
    <string name="add_course_title">Add new course</string>
    <string name="enter_course_name">Write course name...</string>
    <string name="add_course_button">Add course</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">map</string>
    <string name="change_map_perm">Change permissions</string>
    <string name="share_position">Share position</string>
    <string name="localization_text">Share position</string>
    <string name="latex_button_description">Shows the latex display of the written text</string>
    <string name="latex_output">Latex output</string>
    <string name="latex_input">Latex input</string>
    <string name="render">Render</string>
    <string name="latex_save">Save</string>
...
