...
        android:layout_height="121dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="1dp">

        <Switch
            android:id="@+id/switchDark"
            android:layout_width="143dp"
            android:layout_height="48dp"
            android:text="@string/switch_mode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
...
